# eth_mcp_server

./: Cargo.toml  README.md
abi/: IERC20.json
sol/: MockToken.hex  MockToken.sol
src/: main.rs
src/tools/: balance.rs  mod.rs  price.rs  router.rs  swap.rs
src/utils/: contracts.rs  decimals.rs  mod.rs  provider.rs  token_registry.rs
