[package]
name = "eth_mcp_server"
version = "0.1.1"
edition = "2024"

[dependencies]
rmcp = { version = "0.9", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["full"] }
schemars = { version = "1.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.39", features = [
    "std",
    "maths",
    "macros",
    "serde-with-str",
] }
alloy = { version = "1.0", features = ["full"] }
